[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html>
     <head>
-        <link href="/ui/style.css" rel="stylesheet" />
+    <title>pradip,s webapp</title>
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <h1>A test webapp</h1>
         </div>
         <br>
         <div class="center text-big bold">
-        hi this is pradips web app what type of web app you need
+        about the webapp 
+        <p>we can make a web app and parcatice on theis server which is  provide us by Imad nd hasura 
+        from this we can learn how to to make apps (web related)</p>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
