[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,7 @@
         about the webapp 
         <p>we can make a web app and parcatice on theis server which is  provide us by Imad nd hasura 
         from this we can learn how to to make apps (web related)</p>
+        <a href="https:\\www.surajrefractory.com">click on this</a>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
